<resources>
    <string name="app_name">Moman Messenger</string>
    <string name="user_email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="user_password">Password</string>
    <string name="user_name">Username</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="user_password_retype">Retype Password</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
