<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.moman.myfirstapp.MainActivity">
    <!--android:background="@drawable/logo"-->

    <Button
        android:id="@+id/button2"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:background="@drawable/buttonstylered"
        android:onClick="log_in"
        android:text="@string/log_in"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/user_username"
        style="@android:style/Widget.Holo.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_name" />

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@drawable/buttonstylered"
        android:onClick="sign_up"
        android:text="@string/sign_up"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/user_username"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/user_password" />

</RelativeLayout>
