<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignUpActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:showIn="@layout/activity_sign_up">

    <EditText
        android:id="@+id/signUp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUp_password_dup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:hint="@string/user_password_retype"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/signUp_password"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password" />

    <Button
        android:id="@+id/button3"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:background="@drawable/buttonstylered"
        android:onClick="registration"
        android:text="Register"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/signUp_email"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email" />

    <EditText
        android:id="@+id/signUp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>